fixed mobile overflow bug

--- a/src/Pages/OrderSummary/OrderSummary.css
+++ b/src/Pages/OrderSummary/OrderSummary.css
@@ -4,11 +4,11 @@
   align-items: center;
 }
 .snoop {
-  width: 100%;
+  width: 37%;
 }
 .paid {
   margin: 1rem 0;
-  width: 20%;
+  width: 5%;
 }
 .summary-heading {
   font-size: 1.5rem;
@@ -18,4 +18,32 @@
 .back-to-shopping {
   margin-top: 1rem;
   width: 90%;
+}
+.back-to-shopping {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+}
+.back-to-shopping button {
+  width: 80%;
+  padding: 0.7rem 0;
+  border: none;
+  border-radius: 0.1rem;
+  background-color: var(--primary-color);
+  color: white;
+  font-size: 1rem;
+  font-family: "Open Sans", sans-serif;
+  cursor: pointer;
+}
+@media screen and (max-width: 660px) {
+  .snoop {
+    width: 100%;
+  }
+  .paid {
+    margin: 1rem 0;
+    width: 20%;
+  }
+  .back-to-shopping {
+    width: 80%;
+  }
 }
