--- a/src/components/FinalPrice/FinalPrice.css
+++ b/src/components/FinalPrice/FinalPrice.css
@@ -250,3 +250,38 @@
     top: 0;
   }
 }
+@media screen and (max-width: 660px) {
+  .price-detail-containe-wrapper {
+    background-color: white;
+    position: fixed;
+    bottom: -100rem;
+  }
+  .price-detail-container {
+    position: relative;
+    background-color: white;
+    bottom: -16rem;
+  }
+  .price-detail-container .hidden {
+    bottom: -16rem;
+  }
+  .price-detail-container .show2 {
+    background: white;
+    top: 2rem;
+  }
+  .price-detail-containe-wrapper.show {
+    position: fixed;
+    background-color: #fff;
+    z-index: 100;
+    bottom: 2rem;
+  }
+  .reserve {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    border-radius: 0;
+  }
+  .reserve button {
+    border-radius: 0;
+    padding: 1rem;
+  }
+}
